--- a/index.html
+++ b/index.html
@@ -46,6 +46,28 @@
 
             </div>
             <!-- fim header -->
+
+            <div id="area-principal">
+                <div class="conteudo">
+                    <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h2>
+
+                    <p>Quidem modi veritatis nesciunt molestiae repellat ipsum voluptatibus sit laudantium, dolores molestias recusandae temporibus perspiciatis rerum accusamus quibusdam quaerat eius exercitationem non.</p>
+
+                    <p>id unde alias dolorem ea optio rem voluptates. Aliquam eius quis sed nostrum voluptatibus dignissimos maxime hic assumenda.</p>
+
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae harum deserunt non dicta fugiat amet vero esse iste enim, iusto adipisci quo cum possimus ratione illo temporibus quam, voluptates sapiente.</p>
+                </div>
+            </div>
+
+            <div id="area-lateral">
+                <div class="conteudo">
+                    <p>id unde alias dolorem ea optio rem voluptates. Aliquam eius quis sed nostrum voluptatibus dignissimos maxime hic assumenda.</p>
+                </div>
+            </div>
+
+            <div id="rodape">
+                rodape
+            </div>
         </div>
         <!-- fim container -->
     </body>
