formatação e conteúdo ao rodapé e lista de benefícios

--- a/index.html
+++ b/index.html
@@ -61,12 +61,37 @@
 
             <div id="area-lateral">
                 <div class="conteudo">
-                    <p>id unde alias dolorem ea optio rem voluptates. Aliquam eius quis sed nostrum voluptatibus dignissimos maxime hic assumenda.</p>
+                   <ul id="beneficios">
+
+                    <li>
+                        <a href="">
+                            <img src="./img/apartamento.jpg" width="150">
+                            <h3>Apartamento</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                        </a>
+                    </li>
+
+                        <li>
+                            <a href="">
+                                <img src="./img/restaurante.jpg" width="150">
+                                <h3>Restaurante</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="">
+                                <img src="./img/piscina.jpg" width="150">
+                                <h3>Piscina</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                            </a>
+                        </li>
+                   </ul>
                 </div>
             </div>
 
             <div id="rodape">
-                rodape
+                &copy; CopyRight 2000-2025 - Todos os direitos reservados
             </div>
         </div>
         <!-- fim container -->
